<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Infromation System</string>
    <string name="action_settings">Settings</string>
     <string name="heading">Enter Your Details </string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="department">Department: </string>
    <string name="faculty">Faculty: </string>
    <string name="year_of_study">Year Of Study: </string>
    <string name="semester">Semester: </string>
    <string name="email_address">E Mail: </string>
    <string name="user_name">User Name: </string>
    <string name="password">Passsword: </string>
    <string name="server_message">Message: </string>
    <string name="faculty_hint">Ex- EFAC, FIT, Archi </string>
    <string name="department_hint"> Ex- electronic,computer,electrical, civil </string>
    <string name="username_hint">User Name Ex-100470N </string>
    <string name="password_hint">Password </string>
    <string name="username_enter_hint">Your Registraion Number Ex- 100470N </string>  
    <string name="submit">Submit </string>
    <string name="join">        Join         </string>
    <string name="sign">Sign In </string>
    <string name="signOut">Sign Out </string>
    <string name="goBack">Back</string>
    <string name="profile_heading">Account Details</string>
    <string name="check_news">Check News</string>
    <string name="register_news"> Register For News Service</string>
    <string name="refresh"> Refresh</string>  
   
    
</resources>
